--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "react-native": "src/index.ts",
   "main": "src/index.ts",
   "types": "src/index.d.ts",
+  "private": false,
   "peerDependencies": {
     "react": ">=18",
     "react-native": ">=0.73"
